<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="add_expense"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_add_expense_short"
        android:shortcutLongLabel="@string/shortcut_add_expense_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.finploit.android.ADD_EXPENSE"
            android:targetPackage="com.finploit.android"
            android:targetClass="com.finploit.android.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="add_income"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_add_income_short"
        android:shortcutLongLabel="@string/shortcut_add_income_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.finploit.android.ADD_INCOME"
            android:targetPackage="com.finploit.android"
            android:targetClass="com.finploit.android.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
